test_suite/tests/ui/fail/invalid_command_value/invalid_command_about.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_about.rs:3:1
  |
3 | #[command(about=123)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `about` must be a string literal
